services/dep_clusterip.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-cip
  labels: 
    app: my-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: my-app
