services/dep_nodeport.yaml
---
apiVersion: v1
kind: Service
metadata: 
  name: my-app-np
  labels:
    app: my-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
      app: my-app
