services/reactjs-np.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: react-deploy
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: my-app_js
  template:
    metadata:
      labels:
        app: my-app_js
    spec:
      containers:
      - name: my-container
        image: nginx:latest
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: react-np
  labels:
    app: my-app_js
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: my-app_js
